cmake_minimum_required(VERSION 2.8)

project ( Model CXX )
file ( GLOB_RECURSE SRC *.?pp )

add_library(Model SHARED ${SRC})
target_link_libraries(Model Qt5::Core)
target_link_libraries(Model Qt5::Gui)
target_link_libraries(Model Utility)
target_link_libraries(Model Networking)
target_link_libraries(Model TcpNetworking)
target_link_libraries(Model AssetInterfaces)
target_link_libraries(Model AssetGenerics)
target_link_libraries(Model Assets)
target_link_libraries(Model Wavefront)
target_link_libraries(Model QImageLoader)
